# Temporal-Example

./: .gitignore  README.md  pyproject.toml
diagrams/: ecommerce-compensation.mermaid  ecommerce-happy-path.mermaid  rewards-entity-lifecycle.mermaid  rewards-signals-queries.mermaid
ecommerce/: activities.py  models.py  starter.py  worker.py  workflows.py
rewards/: activities.py  models.py  starter.py  worker.py  workflows.py
tests/: test_e2e.py
