[project]
name = "temporal-demo"
version = "0.1.0"
description = "Temporal workflow demos: e-commerce saga + rewards entity pattern"
requires-python = ">=3.12"
dependencies = [
    "temporalio",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "pyright",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
